test/corpus/fail/error-imports.mo
=========
error-imports.mo
=========

import "depri" = "text-module";

---

(source_file
  (import
    (lit_pat
      (text_literal))
    (text_literal)))
